--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,9 @@
 <br>
 <a href="/time">Узнать время</a>
     </h2>
+    <form action="/logout" method="post">
+        <button type="submit">logout</button>
+    </form>
 </div>
 </body>
 </html>
